--- a/blogDetails.html
+++ b/blogDetails.html
@@ -167,7 +167,100 @@
                     <div class="blog_view col-lg-8 px-0">
                         <div class="blog_items">
                             <img src="assets/images/bloglistView_image02.png" alt="" class="img-fluid">
-                            
+                            <div class="blogHeading">
+                                <h4>Finding New Buildings in the Dust of the Old Never Seen Before</h4>
+                                <div class="d-flex">
+                                    <div>
+                                       <a href="#">
+                                          <i class="fa-solid fa-user"></i>
+                                          By: Admin
+                                       </a>
+                                    </div>
+                                    <div class="ms-auto">
+                                       <a class="px-3" href="#">
+                                          <i class="fa-solid fa-thumbs-up"></i>
+                                          2.5 k Likes
+                                       </a>
+                                       <a href="#">
+                                          <i class="fa-solid fa-comments"></i>
+                                          1.5 k Comments 
+                                       </a>
+                                    </div>
+                                </div>
+                                <p>
+                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsumas been the duy's stadard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrabled it to make a typeen book. It has survived not only five centuries, but also the leap into electronicting. Lorem Ipsum is simply dummy xt of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsumas been the duy's stadard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrabled it to make a typeen book. It has survived not only five centuries, but also the leap into electroing. Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                                </p>
+                                <p class="pt-lg-4 pb-lg-4">
+                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsumas been the duy's stadard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrabled it to make a typeen book. It has survived not only five centuries, but also the leap into electronicting. Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                                </p>
+                                <div class="italic">
+                                    <p>
+                                        <i>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsumas been the duy's stadard dummy text ever since the 1500s, when an unknown printer took a galley.</i>
+                                    </p>
+                                </div>
+                                <p class="pt-lg-4">
+                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsumas been the duy's stadard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrabled it to make a typeen book. It has survived not only five centuries, but also the leap into electronicting. Lorem Ipsum is simply dummyext of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsumas been the duy's stadard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrabled it to make a typeen book. It has survived not only five centuries, but also the leap into electroing. Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="comments_section">
+                            <h6>14 COMMENTS</h6>
+                            <div class="commentsBox">
+                                <div class="comments d-flex pt-lg-4 pb-lg-4">
+                                    <div class="img pe-lg-4">
+                                        <img src="./assets/images/bloogdetails_comments_img01.png" alt="" class="img-fluid">
+                                    </div>
+                                    <div class="content">
+                                        <div class="d-flex">
+                                            <h6>Mhadi Tahsan</h6>
+                                            <p class="ms-auto">Posted on: 26 October 2017</p>
+                                        </div>
+                                        <p>hen after before symphony book.Lorem Ipsum has beenry's staardummy text ever since the.Lom Ipsum is simply dummy text of thenting  and we typng industry.</p>
+                                        <a href="#"><i class="fa-solid fa-reply-all"></i> Reply</a>
+                                    </div>
+                                </div>
+
+                                <div class="comments d-flex pt-lg-4 pb-lg-4" style="margin-left: 100px;">
+                                    <div class="img pe-lg-4">
+                                        <img src="./assets/images/bloogdetails_comments_img02.png" alt="" class="img-fluid">
+                                    </div>
+                                    <div class="content">
+                                        <div class="d-flex">
+                                            <h6>Md. Ikbal Ahmed</h6>
+                                            <p class="ms-auto">Posted on: 26 October 2017</p>
+                                        </div>
+                                        <p>hen after before symphony book.Lorem Ipsum has beenry's staardummy text ever since the.Lom Ipsum is simply dummy text of thenting  and we typng industry.</p>
+                                        <a href="#"><i class="fa-solid fa-reply-all"></i> Reply</a>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="comments d-flex pt-lg-4 pb-lg-4">
+                                <div class="img pe-lg-4">
+                                    <img src="./assets/images/bloogdetails_comments_img03.png" alt="" class="img-fluid">
+                                </div>
+                                <div class="content">
+                                    <div class="d-flex">
+                                        <h6>Md. Aminul</h6>
+                                        <p class="ms-auto">Posted on: 26 October 2017</p>
+                                    </div>
+                                    <p>hen after before symphony book.Lorem Ipsum has beenry's staardummy text ever since the.Lom Ipsum is simply dummy text of thenting  and we typng industry.</p>
+                                    <a href="#"><i class="fa-solid fa-reply-all"></i> Reply</a>
+                                </div>
+                            </div>
+                        </div>
+                        
+                        <div class="leaveReaply">
+                            <h5>LEAVE A REAPLY</h5>
+                            <form action="">
+                                <div class="d-flex">
+                                    <input type="text" placeholder="Name">
+                                    <input class="name ms-auto" type="email" placeholder="E-mail">
+                                </div>
+                                <textarea class="d-block" placeholder="Your Message"></textarea>
+                                <button type="submit">SUBMIT</button>
+                            </form>
                         </div>
                     </div>
 
